<resources>
    <string name="app_name">Drivr</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="launcher_text">Drivr</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="register_email">Username</string>
    <string name="register_password">Password</string>
    <string name="title">Drivr</string>
    <string name="prompt_username">Username</string>
    <string name="like">Like</string>
    <string name="action_home">Home</string>
    <string name="action_logout">Log Out</string>
    <string name="descr_overflow_button">Popup Menu</string>
    <string name="action_forums">Forums</string>
    <string name="forum_title">Available Forums</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="add_post">Add Post</string>
    <string name="enter_your_post_here">Enter your post here</string>
    <string name="context_menu_delete">Delete</string>
    <string name="title_activity_deleteafter">deleteafter</string>
    <string name="add_post_text">Enter your anonymous post text here....</string>
    <string name="post_title">Posts</string>
    <string name="button_submit">Submit</string>
    <string name="return_to_login_button">Return to Login</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="title_activity_tab_view_sample">TabViewSample</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_on_google">Search on Google</string>
    <string name="action_contact">Contact Us</string>
    <string name="contextbutton">ContextButton</string>
</resources>
