<?xml version="1.0" encoding="utf-8"?>

<!--
Name: Michal Drahorat
Description: Layout file for the register activity
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.mdrahorat4563.drivr.RegisterActivity">

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/icons"
        android:layout_margin="16dp"
        android:text="@string/button_submit" />

    <Button
        android:id="@+id/returnToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="returnToLogin"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/icons"
        android:layout_margin="16dp"
        android:text="@string/return_to_login_button" />
</LinearLayout>
